# ml-memguard

./: CHANGELOG.md  README.md  pyproject.toml
docs/: adapters.md  rl_optimizer.md
docs/decisions/: 001-mid-training-downgrade-semantics.md  002-qlora-double-quant-bits.md  003-inference-signals-only.md  004-rl-contextual-bandit.md
docs/ebpf/: cgroup_memory_high_probe.md
docs/ecosystem/vllm/: issue-replies.md  memguard.md  pr-body.md
docs/integrations/: allocator.md
docs/protocol/: CHANGELOG.md  mkcp-v1.md  mkcp-v1.proto  mkcp-v1.schema.json
examples/: vllm_allocator_integration.py
examples/k8s/: memguardpolicy.yaml
examples/vllm-quickstart/: docker-compose.yml
helm/memguard/: values.yaml
helm/memguard/crds/: memguardpolicy.yaml
helm/memguard/templates/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml
memory_guard/: __init__.py  bandit.py  cloud.py  guard.py  inference_monitor.py  k8s_policy.py  local_efficiency.py  sidecar.py  telemetry.py  watchdog.py
memory_guard/adaptation/: __init__.py  bandit.py  bandit_state.py  calibration.py  reward.py
memory_guard/adapters/: __init__.py  base.py  huggingface.py  sglang.py  vllm.py
memory_guard/cli/: __init__.py  efficiency.py
memory_guard/data/: gpu_tier_catalog.json
memory_guard/deployment/: __init__.py  sidecar.py  watchdog.py
memory_guard/ebpf/: __init__.py  _session.py  cgroup_memory.py  preemption.py
memory_guard/ebpf/probes/: __init__.py  _rolling_window.py  cgroup_memory.bpf.c  cgroup_memory_high.py  mmap.bpf.c  mmap_growth.py  page_fault.bpf.c  page_fault.py
memory_guard/estimation/: __init__.py  downgrade.py  estimator.py
memory_guard/monitoring/: __init__.py  cuda_recovery.py  inference_monitor.py  monitor.py  platforms.py
tests/: conftest.py  test_adapters_base.py  test_adapters_huggingface.py  test_bandit.py  test_bandit_integration.py  test_bandit_recommend.py  test_bandit_state.py  test_cloud_client.py  test_ebpf.py  test_ebpf_cgroup_high.py  test_ebpf_integration.py  test_ebpf_page_fault_mmap.py  test_guard.py  test_hf_mid_training_downgrade.py  test_inference_telemetry.py  test_integrations_compat.py  test_kv_cache_monitor.py  test_kvcache_critical.py  test_local_efficiency.py  test_predict_ml.py  test_predict_oom.py  test_reward.py  test_sglang_adapter.py  test_sidecar.py  test_vllm_adapter.py  test_watchdog.py
